--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "assets-relocate": "assets-relocate-cli.js"
   },
   "dependencies": {
+    "boxen": "^1.3.0",
     "chalk": "^1.1.3",
+    "cpy": "^6.0.0",
     "decompress": "^4.2.0",
+    "graceful-fs": "^4.1.11",
     "lodash": "^4.17.4",
     "meow": "^4.0.0",
     "rimraf": "^2.6.2",
+    "shortid": "^2.2.8",
     "zip-dir": "^1.0.2"
   },
   "devDependencies": {},
