--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "decompress": "^4.2.0",
     "graceful-fs": "^4.1.11",
     "lodash": "^4.17.4",
+    "leftpad": "0.0.1",
     "meow": "^4.0.0",
     "rimraf": "^2.6.2",
     "shortid": "^2.2.8",
