--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "leftpad": "0.0.1",
     "meow": "^4.0.0",
+    "ora": "^1.4.0",
     "rimraf": "^2.6.2",
     "shortid": "^2.2.8",
     "zip-dir": "^1.0.2"
