feat: add cli for rules-fixer

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "assets-relocate": "assets-relocate-cli.js",
     "template-relocate": "template-relocate-cli.js",
-    "prod-to-stage": "prod-to-stage-cli.js"
+    "prod-to-stage": "prod-to-stage-cli.js",
+    "rules-fix": "rules-cli.js"
   },
   "dependencies": {
     "boxen": "^1.3.0",
